// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-exponent.js [babel] format 1`] = `
"Floating-point numbers require a valid exponent after the 'e'. (1:1)
> 1 | 12.3e
    | ^
  2 |"
`;

exports[`invalid-exponent.js [espree] format 1`] = `
"Invalid number (1:1)
> 1 | 12.3e
    | ^
  2 |"
`;

exports[`invalid-exponent.js [meriyah] format 1`] = `
"[1:5]: Non-number found after exponent indicator (1:5)
> 1 | 12.3e
    |     ^
  2 |"
`;
